--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <input type="hidden" name="accessKey" value="f5d72d87-5fec-41b5-a611-addfadadc70a" />
 
-        <input type="hidden" name="redirectTo" value="permanecer na mesma pagina.com.br" />
+        <input type="hidden" name="redirectTo" value="https://biancagboliveira.github.io/Pagina-de-contato/" />
 
         <label for="name">Nome:</label>
         <input type=" text" id="name" name="name" />
